# limmbo

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  documentation  readthedocs.yml  requirement_docs.txt  requirements.txt  requirements_docs.txt  setup.cfg  setup.py  version.py
.github/ISSUE_TEMPLATE/: bug_report.md
core/: vdbootstrap.py
doc/: Makefile  cmd.rst  conf.py  environment.yml  gwas.rst  index.rst  input.rst  install.rst  rtfd-requirements.txt  vd.rst  vdbootstrap.rst  vdsimple.rst
doc/_build/html/: .buildinfo  cmd.html  genindex.html  gwas.html  index.html  input.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html  vd.html
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/limmbo/core/: gwas.html  vdbootstrap.html  vdsimple.html
doc/_build/html/_modules/limmbo/io/: input.html  parser.html  reader.html
doc/_build/html/_modules/limmbo/utils/: utils.html
doc/_build/html/_sources/: cmd.rst.txt  gwas.rst.txt  input.rst.txt  utils.rst.txt
io/: input.py
limmbo/: README.md  __init__.py  testit.py
limmbo/core/: __init__.py  gwas.py  utils.py  vdbootstrap.py  vdsimple.py
limmbo/core/test/: test_vdbootstrap.py  test_vdsimple.py
limmbo/doc/: make.bat
limmbo/io/: __init__.py  gwas_input.py  gwas_parser.py  input.py  input2.py  parser.py  reader.py  utils.py
limmbo/io/test/: test_input.py  test_io.py  test_reader.py
limmbo/io/test/data/: Cg.csv  Cn.csv  covs.csv  datadescription.md  genotypes.bed  genotypes.bim  genotypes.csv  genotypes.fam  pheno.csv  samplelist.csv
limmbo/limmbo/core/: vdbootstrap.py
limmbo/limmbo/io/: parser.py
limmbo/limmbo/utils/: plotting.py
limmbo/plot/: __init__.py  manhattan.py
limmbo/utils/: __init__.py  plotting.py  test_init  utils.py
performance/: Evaluate_sampling.py  README.md
utils/: plotting.py  utils.py
