[metadata]
author = Hannah Meyer
author_email = hannah@ebi.ac.uk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
description = Linear mixed model bootstrapping
download_url = https://github.com/HannahVMeyer/limmbo
keywords = lmm, bootstrapping
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=ASCII
maintainer = Hannah Meyer
platforms = Windows, MacOS, POSIX, POSIX :: Linux
maintainer_email = hannah@ebi.ac.uk
name = limmbo
url = https://github.com/HannahVMeyer/limmbo
version = attr: limmbo.__version__

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    pandas>=0.22
    numpy>=1.14.0
    toolz>=0.9.0
setup_requires =
    pypandoc>=1.4
    pytest_runner>=3.0
tests_require =
    pytest>=3.2.5

[aliases]
test = pytest

[tool:pytest]
addopts = -x --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
norecursedirs = doc .eggs
