[metadata]
author = Hannah Meyer
author_email = hannah@ebi.ac.uk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
description = Linear mixed model bootstrapping
download_url = https://github.com/HannahVMeyer/limmbo
keywords = lmm, bootstrapping
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=ASCII
maintainer = Hannah Meyer
platforms = Windows, MacOS, POSIX, POSIX :: Linux
maintainer_email = hannah@ebi.ac.uk
name = limmbo
url = https://github.com/HannahVMeyer/limmbo
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    numpy>=1.14.5
    scipy>=1.0.0
    cython>=0.28.3
    multiprocess
    pathos
    bottleneck>=1.2.1
    scipy-sugar>=1.0.4
    limix==1.0.18
    limix-legacy==0.8.12
setup_requires =
    pypandoc>=1.4
test_requires =
    pytest >=3.2.0
    pytest-pep8 >=1.0.5
    pytest-sugar >=0.9.0

